package ca.cal.tp2.model;

import lombok.*;

@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
public class LibraryAgent extends User {

}
